Ya funciona el servicio

--- a/WcfService/Web.config
+++ b/WcfService/Web.config
@@ -11,22 +11,65 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
-  <system.serviceModel>
+
+
+  <!--<system.serviceModel>
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <!-- Para evitar revelar información de los metadatos, establezca los valores siguientes en false antes de la implementación -->
+          -->
+  <!-- Para evitar revelar información de los metadatos, establezca los valores siguientes en false antes de la implementación -->
+  <!--
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <!-- Para recibir detalles de las excepciones en los fallos, con el fin de poder realizar la depuración, establezca el valor siguiente en true. Para no revelar información sobre las excepciones, establézcalo en false antes de la implementación -->
+          -->
+  <!-- Para recibir detalles de las excepciones en los fallos, con el fin de poder realizar la depuración, establezca el valor siguiente en true. Para no revelar información sobre las excepciones, establézcalo en false antes de la implementación -->
+  <!--
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
+    <endpointBehaviors>
+        <behavior>
+          <webHttp helpEnabled="True"/>
+        </behavior>
+      </endpointBehaviors>
     </behaviors>
     <protocolMapping>
-      <add binding="basicHttpsBinding" scheme="https" />
+      <add binding="webHttpBinding" scheme="http" />
     </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+  </system.serviceModel>-->
+
+  <system.serviceModel>
+    <services>
+      <service name="WcfService.CustomerService">
+        <endpoint address="" binding="webHttpBinding" bindingConfiguration="webHttpBindingWithJsonP"
+                  contract="WcfService.ICustomerService" behaviorConfiguration="webHttpBehavior"/>
+      </service>
+    </services>
+    <bindings>
+      <webHttpBinding>
+        <binding name="webHttpBindingWithJsonP" crossDomainScriptAccessEnabled="true"/>
+      </webHttpBinding>
+    </bindings>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="webHttpBehavior">
+          <webHttp/>
+        </behavior>
+      </endpointBehaviors>
+
+      <serviceBehaviors>
+        <behavior>
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>      
+    </behaviors>
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
+
+
+
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
     <!--
