--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -201,11 +201,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\CustomerServiceReference\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -215,13 +210,9 @@
     <Content Include="Scripts\Controllers\LoadPageController.js" />
     <Content Include="Scripts\Controllers\WebApp.js" />
     <Content Include="Scripts\_references.js" />
-    <None Include="Service References\CustomerServiceReference\configuration91.svcinfo" />
-    <None Include="Service References\CustomerServiceReference\configuration.svcinfo" />
-    <None Include="Service References\CustomerServiceReference\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -240,25 +231,9 @@
     <Content Include="Views\Menu\One.cshtml" />
     <Content Include="Views\Menu\Two.cshtml" />
     <Content Include="Views\Menu\Three.cshtml" />
-    <None Include="Service References\CustomerServiceReference\CustomerService.wsdl" />
-    <None Include="Service References\CustomerServiceReference\CustomerService.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\CustomerServiceReference\CustomerService1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\CustomerServiceReference\CustomerService2.xsd">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Service References\CustomerServiceReference\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
