Se modifica el servicio para que apunte a las nuevas clases de serializacion

--- a/WcfService/WcfService.csproj
+++ b/WcfService/WcfService.csproj
@@ -82,12 +82,17 @@
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.cs</LastGenOutput>
     </Content>
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="City.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="ClassSerializer\CitySerializer.cs" />
+    <Compile Include="ClassSerializer\CustomerSerializer.cs" />
+    <Compile Include="ClassSerializer\DocumentsTypeSerializer.cs" />
     <Compile Include="Customer.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
